Replaced repo jx by equo-samples