@@ -1,21 +1,23 @@
 
-val chromiumVersion = "95.0.12"
-val chromiumJxVersion = "${chromiumVersion}.1"
-var vmArgs = "-Dempty"
+val chromiumVersion = "95.0.29"
+val chromiumPlatformVersion = "95.0.21"
+val chromiumJxVersion = "${chromiumVersion}.0"
 var envVars = mutableMapOf<String, String>()
 val os = System.getProperty("os.name").toLowerCase()
-val platform = when {
-    os.contains("linux") -> {
-    	envVars["GDK_BACKEND"] = "x11"
-        vmArgs = "-Dchromium.init_threads=true"
-        "gtk.linux"
-    }
-    os.contains("win") -> "win32.win32"
-    os.contains("mac") -> {
-        vmArgs = "-XstartOnFirstThread"
-        "cocoa.macosx"
-    }
-    else -> ""
+var vmArgs = mutableListOf<String>()
+var platform = ""
+if (os.contains("linux")) {
+    envVars["GDK_BACKEND"] = "x11"
+    platform = "gtk.linux"
+    vmArgs.add("-Dchromium.init_threads=true")
+} else if (os.contains("mac")) {
+    platform = "cocoa.macosx"
+    vmArgs.add("-XstartOnFirstThread")
+} else if (os.contains("windows")) {
+    platform = "win32.win32"
+}
+if(JavaVersion.current().majorVersion.toInt() > 16) {
+    vmArgs.addAll(listOf("-Dkotlin.daemon.jvm.options=--illegal-access=permit"))
 }
 
 configurations.all {
@@ -33,18 +35,18 @@ plugins {
 
 repositories {
     mavenCentral()
-    maven(url = "https://dl.equo.dev/chromium-swt-ee/jx/mvn")
+    maven(url = "https://dl.equo.dev/chromium-swt-ee/equoSamples/mvn")
 }
 
 dependencies {
-    implementation("com.equo:com.equo.chromium.cef.${platform}.x86_64:${chromiumVersion}")
+    implementation("com.equo:com.equo.chromium.cef.${platform}.x86_64:${chromiumPlatformVersion}")
     implementation("com.equo:com.equo.chromium.jx:${chromiumJxVersion}")
     implementation("org.eclipse.platform:org.eclipse.swt.${platform}.x86_64:3.121.0")
     implementation("org.eclipse.platform:org.eclipse.swt:3.121.0")
 }
 
 application {
-    applicationDefaultJvmArgs = listOf("${vmArgs}")
+    applicationDefaultJvmArgs = vmArgs
     mainClass.set("SampleSWT.SampleSWTKt")
     tasks.named<JavaExec>("run") {
         environment(envVars)
