@@ -1,15 +1,20 @@
 
-val chromiumVersion = "95.0.12"
-var vmArgs = "-Dempty"
+val chromiumVersion = "95.0.29"
+val chromiumPlatformVersion = "95.0.21"
 val os = System.getProperty("os.name").toLowerCase()
-val platform = when {
-    os.contains("linux") -> "gtk.linux" 
-    os.contains("win") -> "win32.win32"
-    os.contains("mac") -> {
-        vmArgs = "-XstartOnFirstThread"
-        "cocoa.macosx"
-    }
-    else -> ""
+var vmArgs = mutableListOf<String>()
+var platform = ""
+if (os.contains("linux")) {
+    platform = "gtk.linux"
+    vmArgs.add("-Dchromium.init_threads=true")
+} else if (os.contains("mac")) {
+    vmArgs.add("-XstartOnFirstThread")
+    platform = "cocoa.macosx"
+} else if (os.contains("windows")) {
+    platform = "win32.win32"
+}
+if(JavaVersion.current().majorVersion.toInt() > 16) {
+    vmArgs.add("-Dkotlin.daemon.jvm.options=--illegal-access=permit")
 }
 
 configurations.all {
@@ -27,17 +32,17 @@ plugins {
 
 repositories {
     mavenCentral()
-    maven(url = "https://dl.equo.dev/chromium-swt-ee/jx/mvn")
+    maven(url = "https://dl.equo.dev/chromium-swt-ee/equoSamples/mvn")
 }
 
 dependencies {
-    implementation("com.equo:com.equo.chromium.cef.${platform}.x86_64:${chromiumVersion}")
+    implementation("com.equo:com.equo.chromium.cef.${platform}.x86_64:${chromiumPlatformVersion}")
     implementation("com.equo:com.equo.chromium:${chromiumVersion}")
     implementation("org.eclipse.platform:org.eclipse.swt.${platform}.x86_64:3.121.0")
     implementation("org.eclipse.platform:org.eclipse.swt:3.121.0")
 }
 
 application {
-    applicationDefaultJvmArgs = listOf("${vmArgs}")
+    applicationDefaultJvmArgs = vmArgs
     mainClass.set("SampleSWT.SampleSWTKt")
 }
